Fri Feb 24 11:29:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2349_Regression/Bug_2349_Regression.mpc:
          Added after to fix build problems with the vc8 ide

Fri Feb 24 10:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Sequence_Latency/DII/client.cpp:
          Added static casts to fix compile errors with SunCC 64bit

Fri Feb 24 09:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/interface.idl:
          Added try interface as testcase

Fri Feb 24 09:43:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Basic_Arguments.h:
          Use for the basic types the AnyTypeCode adapter, belonging to
          Tue Feb 21 19:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

Fri Feb 24 07:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTScheduling/RTScheduler_includeS.h:
          Added this file, needed by the RTScheduling example

Thu Feb 23 21:45:54 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:
          The test "nt_service_ir" copies files, installs services, and starts
          those services (Windows "NT" Services).  With this change the test
          will clean up all of these actions even when the test fails.

Thu Feb 23 20:01:29 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerated for autoconf TK Reactor / TK Resource Factory
          support.

Thu Feb 23 18:41:18 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/Utils/Servant_Var.inl (operator=):
        * tao/Valuetype/Value_VarOut_T.cpp (operator=):

          Fixed problem where non-copying assignment prematurely decreased
          reference count on contained object by adding a check for
          self-assignment.  The canonical copy-and-swap idiom was used to
          provide a strong exception safety guarantee.  It doesn't require